--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -1,3 +1,9 @@
+IP：172.18.8.251
+
+# 端口开放
+To do
+
+
 # 必要环境安装
 - Docker 1.13.1
 - openjdk 1.8.0_191
@@ -43,3 +49,16 @@ sudo yum install epel-release -y
 sudo yum install -y python-pip -y
 sudo pip install docker-compose
 ```
+
+[Java-callgraph](https://github.com/gousiosg/java-callgraph)
+```
+sudo yum install -y graphviz
+java -jar javacg-0.1-SNAPSHOT-static.jar 
+```
+# 生成call-graph
+```
+python 0.total.py spring-petclinic-microservices
+```
+
+
+
