--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -1,8 +1,44 @@
 IP：172.18.8.251
 
 # 端口开放
-To do
+- 安装firewalld
+```
+sudo yum remove -y 1:NetworkManager-1.10.2-16.el7_5.x86_64
+sudo yum remove -y 1:NetworkManager-1.0.6-27.el7.x86_64
+sudo yum remove -y selinux-policy-3.13.1-60.el7.noarch
+sudo yum install -y firewalld
+```
+- 启动firewalld
+```
+systemctl start firewalld.service
+```
+- 添加端口，以21为例
+```
 
+firewall-cmd --zone=public --add-port=21/tcp --permanent
+firewall-cmd --reload
+firewall-cmd --list-ports
+```
+- 停止防火墙
+```
+systemctl stop firewalld.service
+```
+- 关闭&&启动防火墙
+```
+//临时关闭防火墙,重启后会重新自动打开
+systemctl restart firewalld
+//检查防火墙状态
+firewall-cmd --state
+firewall-cmd --list-all
+//Disable firewall
+systemctl disable firewalld
+systemctl stop firewalld
+systemctl status firewalld
+//Enable firewall
+systemctl enable firewalld
+systemctl start firewalld
+systemctl status firewalld
+```
 
 # 必要环境安装
 - Docker 1.13.1
