--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -40,6 +40,38 @@ systemctl start firewalld
 systemctl status firewalld
 ```
 
+- iptables
+```
+systemctl stop firewalld.service                #停止firewall
+systemctl disable firewalld.service           #禁止firewall开机启动
+```
+
+2、安装iptables防火墙
+```
+yum install -y iptables-services         #安装iptables
+
+vim /etc/sysconfig/iptables               #编辑防火墙配置文件
+```
+
+3、重启防火墙
+```
+systemctl restart iptables.service      #最后重启防火墙使配置生效
+
+systemctl enable iptables.service     #设置防火墙开机启动
+```
+
+
+说明：后续要添加端口，先重启服务器再保存。
+```
+service iptables restart
+
+service iptables save
+```
+
+scp拉取 指定端口
+```
+scp -P 11022 root@172.18.8.251:/home/webdep .
+```
 # 必要环境安装
 - Docker 1.13.1
 - openjdk 1.8.0_191
@@ -54,7 +86,7 @@ Docker
 
 安装
 ```
-suodo yum install docker
+sudo yum install docker
 ```
 docker命令免sudo执行
 ```
