--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -128,5 +128,14 @@ java -jar javacg-0.1-SNAPSHOT-static.jar
 python 0.total.py spring-petclinic-microservices
 ```
 
+# 过滤生成的分析语句
+```
+sh purify-file.sh out
+``
+产生out-final.txt 97行
 
+# 生成call graph
+```
+sh 4.trans.sh out-final
+```
 
