--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -1,44 +1,26 @@
 IP：172.18.8.251
 
-# 端口开放
-- 安装firewalld
+# 端口配置
+在windows上配置hosts文件
 ```
-sudo yum remove -y 1:NetworkManager-1.10.2-16.el7_5.x86_64
-sudo yum remove -y 1:NetworkManager-1.0.6-27.el7.x86_64
-sudo yum remove -y selinux-policy-3.13.1-60.el7.noarch
-sudo yum install -y firewalld
-```
-- 启动firewalld
-```
-systemctl start firewalld.service
-```
-- 添加端口，以21为例
+172.18.8.239 vm1 
+172.18.8.245 vm2 
+172.18.8.246 vm3 
+172.18.8.248 vm4 
+172.18.8.249 vm5 
+172.18.8.250 vm6 
+172.18.8.251 vm7
 ```
 
-firewall-cmd --zone=public --add-port=21/tcp --permanent
-firewall-cmd --reload
-firewall-cmd --list-ports
-```
-- 停止防火墙
-```
-systemctl stop firewalld.service
-```
-- 关闭&&启动防火墙
-```
-//临时关闭防火墙,重启后会重新自动打开
-systemctl restart firewalld
-//检查防火墙状态
-firewall-cmd --state
-firewall-cmd --list-all
-//Disable firewall
-systemctl disable firewalld
-systemctl stop firewalld
-systemctl status firewalld
-//Enable firewall
-systemctl enable firewalld
-systemctl start firewalld
-systemctl status firewalld
-```
+chrome 
+安装插件 梧桐雨的工具箱 
+用来扫描端口
+这个并不能在端口没有服务的时候识别出来
+用nc或者本机netstat就可以
+
+
+
+# 端口开放
 
 - iptables
 ```
@@ -60,12 +42,14 @@ systemctl restart iptables.service      #最后重启防火墙使配置生效
 systemctl enable iptables.service     #设置防火墙开机启动
 ```
 
-
-说明：后续要添加端口，先重启服务器再保存。
+4.后续要添加端口，先重启服务器再保存。
 ```
-service iptables restart
-
-service iptables save
+比如要添加8080端口
+vim /etc/sysconfig/iptables
+-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
+重启，保存
+sudo /bin/systemctl restart iptables.service
+sudo service iptables save
 ```
 
 scp拉取 指定端口
@@ -86,7 +70,7 @@ Docker
 
 安装
 ```
-sudo yum install docker
+sudo yum -y install docker
 ```
 docker命令免sudo执行
 ```
@@ -120,12 +104,16 @@ sudo pip install docker-compose
 
 [Java-callgraph](https://github.com/gousiosg/java-callgraph)
 ```
+mkdir app
+cd app
+git clone https://github.com/gousiosg/java-callgraph
 sudo yum install -y graphviz
 java -jar javacg-0.1-SNAPSHOT-static.jar 
 ```
 # 生成call-graph
 ```
-python 0.total.py spring-petclinic-microservices
+python 0.total.py 
+pring-petclinic-microservices
 ```
 
 # 过滤生成的分析语句
