--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -127,3 +127,12 @@ sh purify-file.sh out
 sh 4.trans.sh out-final
 ```
 
+# 数据监控
+[dockerprom](https://github.com/stefanprodan/dockprom)
+修改数据监控的端口
+只要在docker-compose里面修改就可以
+已经把promethus的端口修改到9001
+Tips：
+vimdiff file1 file2
+可以看到两个文件的不同
+
