--- a/单机部署实验.md
+++ b/单机部署实验.md
@@ -143,3 +143,12 @@ vimdiff file1 file2
 
 可以看到两个文件的不同
 
+
+# 并发测试
+[locust](https://debugtalk.com/post/head-first-locust-user-guide/)
+```
+pip install locustio
+locust -H http://debugtalk.com -f demo.py -P 8001
+//指定端口为8001，可以换
+设置用户数和并发的速率
+```
